--- a/Horacio/Menuconcarrusel.html
+++ b/Horacio/Menuconcarrusel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portal de Películas</title>
     <style>
-        /* --- ESTILOS GENERALES --- */
+        /* --- ESTILOS GENERALES HORACIO EL NEGRO--- */
         * { box-sizing: border-box; margin: 0; padding: 0; }
         html, body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; color: #0f172a; background: #f6f7fb; }
         .container { max-width: 1100px; margin: 28px auto; padding: 18px; }
