boton peliculas listo y error de dedo en la pagina principal que ya corregi como si no le hubiera movido nada

--- a/Proyecto De Equipo/Horacio/botonperfil.html
+++ b/Proyecto De Equipo/Horacio/botonperfil.html
@@ -21,8 +21,8 @@
 
   <!-- Cabecera -->
   <header class="w3-bar w3-black w3-padding">
-    <span class="w3-bar-item w3-xlarge">Nombre de nuestra pagina</span>
-    <a href="Peliculas.html" class="w3-bar-item w3-button w3-hover-light-grey">Películas</a>
+    <span class="w3-bar-item w3-xlarge">CineCritics</span>
+    <a href="botonpeliculas.html" class="w3-bar-item w3-button w3-hover-light-grey">Películas</a>
     <a href="resena.html" class="w3-bar-item w3-button w3-hover-light-grey">Reseña</a>
     <a href="registro.html" class="w3-bar-item w3-button w3-hover-light-grey">Registro</a>
     <a href="botonperfil.html" class="w3-bar-item w3-button w3-hover-light-grey">Perfil</a>
@@ -46,7 +46,7 @@
       <p><strong>Miembro desde:</strong> Enero 2025</p>
       <p><strong>Preferencias:</strong> Drama, Ciencia Ficción, Acción</p>
     </section>
-s
+
     <!-- Reseñas del usuario -->
     <section class="w3-card w3-padding w3-round-large w3-margin-top">
       <h3>Mis Reseñas</h3>
@@ -74,7 +74,7 @@ s
 
   <!-- Pie de página -->
   <footer class="w3-container w3-black w3-padding w3-margin-top">
-    <p>Datos | Pie de página © 2025</p>
+    <p>Datos | CineCritics © 2025</p>
   </footer>
 
 </body>
